--- a/Registrar_usuario/estilos.css
+++ b/Registrar_usuario/estilos.css
@@ -170,12 +170,12 @@ footer{
 
 
     html, body {
-        height: 100%;
+        height: 101%;
     }
 
 
     .content{
-        height: 85%;
+        height: 100%;
     }
 
 
@@ -183,7 +183,9 @@ footer{
         height: 15%;
     }
 
-
+    .contenedorPrincipal{
+        height: 75%;
+    }
 
     .banner2{
         height: 10%;
@@ -201,7 +203,11 @@ footer{
     }
 
     html, body {
-        height: 98.8%;
+        height: 100%;
+    }
+
+    .content{
+        height: 95%;
     }
 
     footer{
